<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/account_userimage"
            android:layout_width="99dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/description"
            android:src="@drawable/profile1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/name"
                android:text="name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:textColor="#131313"/>
            <TextView
                android:id="@+id/apartmentname"
                android:text="@string/apartmentname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:textColor="#131313"/>
            <TextView
                android:id="@+id/apartmentcode"
                android:text="@string/apartmentcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:textSize="18sp"
                android:textColor="#131313"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_marginTop="25dp"
        android:id="@+id/account_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:menu="@menu/account_menu_item"/>


</LinearLayout>